Initial import: rpmbd simulated RPMB device (CUSE/FUSE)

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,52 @@
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-CMakeUserPresets.json
+# ---- Build directories ----
+build/
+cmake-build-*/
+out/
+debug/
+release/
 
-# CLion
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#cmake-build-*
+# ---- CMake ----
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+CTestTestfile.cmake
+compile_commands.json
+install_manifest.txt
+
+# ---- Object / binaries ----
+*.o
+*.obj
+*.a
+*.so
+*.so.*
+*.dll
+*.dylib
+*.exe
+rpmbd
+
+# ---- Debug / tooling ----
+*.dSYM/
+*.gdb
+*.gdb_history
+*.lldb_history
+core
+vgcore.*
+
+# ---- RPMB simulator runtime files ----
+rpmb_state.bin
+key.bin
+data.bin
+out.bin
+
+# ---- Logs ----
+*.log
+
+# ---- Editor / IDE ----
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
